[package]
name = "ultivm"
version = "0.0.1"
edition = "2021"

build = "build.rs"

[dependencies]
actix-web = "4.0"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }